--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.js"></script>
     <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.3.js"></script>
+    <script src="js/module.js"></script>
     <script src="controllers/controller.js"></script>
     <script src="controllers/DatepickerPopupDemoCtrl.js"></script>
     <script src="node_modules/ng-dialog/js/ngDialog.js"></script>
